--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_ordemCompra.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_ordemCompra.xhtml
@@ -213,6 +213,9 @@
 									    </p:column>
 									    
 									    <p:columnGroup type="footer">
+									    	<p:row >
+										    	<p:column colspan="4" style="font-weight: bold;" footerText="Frete: #{gerarOrdemCompraController.ordemCompra.cotacao.freteFormatado}" />
+										    </p:row>
 										    <p:row >
 										    	<p:column colspan="4" style="font-weight: bold;" footerText="Valor Total: #{gerarOrdemCompraController.ordemCompra.cotacao.valorTotalFormatado}" />
 										    </p:row>
