--- a/portaljcr/WebContent/pages/suporte/editar_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/editar_chamado.xhtml
@@ -36,7 +36,7 @@
 		             			<h3 class="box-title">Solução</h3>
 		            		</div>
 		            		<div class="box-body">
-		            			<p:outputLabel id="solucaoChamado" value="#{chamadoController.chamado.solucao}" styleClass="control-label font-normal" />
+		            			<h:inputTextarea id="solucaoChamado" value="#{chamadoController.chamado.solucao.toUpperCase()}" styleClass="form-control" rows="3" readonly="true" style="background-color: #FFF;"/>
 		            		</div>
 						</p:panel>
 						<div class="nav-tabs-custom">
@@ -273,6 +273,17 @@
 												rendered="#{chamadoController.chamado.situacao eq 'RESOLVIDO' and chamadoController.chamado.usuarioSolicitante eq usuario}"
 												oncomplete="PF('modalFeedback').show();"
 												ajax="true" />
+										</div>
+										<div class="col-sm-3 col-md-3" >
+											<p:commandButton
+												styleClass="btn-vermelho-claro"
+												icon="fa fa-send"
+												value="Atribuir para Gustavo"
+												id="btn_atribuir_gustavo"
+												process="@this"
+												action="#{chamadoController.atribuirGustavo()}"
+												update="@form"
+												ajax="true" rendered="#{(usuario.usuario eq 'mattosl' or  usuario.usuario eq 'leonardo') and  chamadoController.chamado.situacao eq 'ABERTO'}" />
 										</div>
 									</div>
 								</p:panel>
