--- a/portaljcr/WebContent/pages/orcamento/ajusteOrcamentario/editar_ajusteOrcamentario.xhtml
+++ b/portaljcr/WebContent/pages/orcamento/ajusteOrcamentario/editar_ajusteOrcamentario.xhtml
@@ -19,7 +19,7 @@
 		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
-				<h:form id="solicitacaoCompraForm" acceptcharset="ISO-8859-1" lang="pt_BR">
+				<h:form id="ajusteOrcamentarioForm" acceptcharset="ISO-8859-1" lang="pt_BR">
 					<f:validateBean disabled="true" for="@form">
 						<p:panel toggleable="false" id="painelConsulta" styleClass="box box-danger">
 							<div class="box-header with-border">
