--- a/portaljcr/WebContent/pages/orcamento/responsaveis/listar_responsaveis.xhtml
+++ b/portaljcr/WebContent/pages/orcamento/responsaveis/listar_responsaveis.xhtml
@@ -38,8 +38,22 @@
 									        <p:selectOneMenu id="coligada" value="#{responsavelOrcamentoController.coligada}">
 									        	<f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="false" />
 									        	<f:selectItems value="#{responsavelOrcamentoController.listaColigada}" var="coligada" itemLabel="#{coligada.razaoSocial}" itemValue="#{coligada}" />
-									        	<p:ajax event="change" listener="#{responsavelOrcamentoController.carregarCentroCusto()}" process="@this" update=":gridForm" global="true" />
+									        	<p:ajax event="change" process="@this" listener="#{responsavelOrcamentoController.carregarCentroCusto()}" global="false" update=":gridForm" />
 									        </p:selectOneMenu>
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="col-sm-2 col-md-2 control-label">
+											<label for="usuario">Responsável: *</label>
+										</div>
+	
+										<div class="col-sm-10 col-md-10">
+									        <p:autoComplete id="usuario" value="#{responsavelOrcamentoController.usuario}" var="usr" itemLabel="#{usr.nome}" itemValue="#{usr}" forceSelection="true" completeMethod="#{responsavelOrcamentoController.autocompleteUsuario}" minQueryLength="3" effect="fade">
+									        	<p:ajax event="query" update=":gridForm" global="false" resetValues="true" />
+									        	<p:ajax event="change" process="@this" global="false" update=":gridForm" listener="#{responsavelOrcamentoController.limparTabela()}" />
+									        	<p:ajax event="itemSelect" process="@form" listener="#{responsavelOrcamentoController.carregarCentroCusto()}" global="false" update=":gridForm" />
+									        </p:autoComplete>
+									        <p:watermark value="Escreva o nome do usuário (Minímo 3 caracteres)." for="usuario" />
 										</div>
 									</div>
 								</div>
@@ -48,92 +62,22 @@
 					</f:validateBean>
 				</h:form>
 				<h:form id="gridForm" acceptcharset="ISO-8859-1" lang="pt_BR">
-					<p:outputPanel id="resultado">
-					    <p:repeat value="#{responsavelOrcamentoController.listaResponsavel}" var="resp"> 
-					    	<p:panel header="#{resp.centroCusto.codigoCentroCusto} - #{resp.centroCusto.centroCusto}" toggleable="true" collapsed="true" >
-			            		<div class="row" style="margin-bottom: 8px;">
-				            		<div class="col-sm-3 col-md-3 col-xs-12 pull-left">
-										<p:commandButton  
-											styleClass="btn-azul"
-											icon="fa fa-users"
-											value="Adicionar Responsável"
-											id="btn_add_responsavel"
-											process="@this"
-											oncomplete="PF('modalUsuario').show();"
-											update="@form:modalUsuario"
-											ajax="true">
-											<f:setPropertyActionListener value="#{resp.centroCusto}" target="#{responsavelOrcamentoController.centroCusto}" />
-										</p:commandButton>
-									</div>
-			            		</div>
-					    		<p:dataTable var="usuario" value="#{resp.listaResponsavel}"
-									emptyMessage="Nenhum responsável pelo orçamento neste centro de custo.">
-							        <p:column headerText="">
-							            <h:outputText value="#{usuario.nome}" />
-							        </p:column>
-							        <p:column headerText="Remover" style="text-align: center;font-size:12px;" width="8%">
-										<p:commandLink ajax="true" process="@this" action="#{responsavelOrcamentoController.excluirUsuario()}" update="@form:resultado" >
-											<h:outputText value="" title="Remover" styleClass="fa fa-times" />
-											<f:setPropertyActionListener value="#{resp.centroCusto}" target="#{responsavelOrcamentoController.centroCusto}" />
-											<f:setPropertyActionListener value="#{usuario}" target="#{responsavelOrcamentoController.usuario}" />
-										</p:commandLink>
-									</p:column>
-							    </p:dataTable>
-					    	</p:panel>
-					    </p:repeat>
-					</p:outputPanel>
-				    <p:dialog styleClass="modal-dialog modal-content" style="width: auto !important;"
-						id="modalUsuario"
-						widgetVar="modalUsuario" 
-						header="Novo Responsável"
-						resizable="false" 
-						responsive="true"
-						width="50%"
-						closable="false"
-						draggable="false"
-						modal="true">
-						<p:messages id="mensagemModal" showDetail="true" closable="true" />
-						<div class="form-horizontal">
-							<div class="box-body">
-								<div class="form-group">
-									<div class="col-sm-3 col-md-3 control-label">
-										<label for="usuario">Responsável:</label>
-									</div>
-
-									<div class="col-sm-9 col-md-9">
-								        <p:autoComplete id="usuario" value="#{responsavelOrcamentoController.usuario}" var="usr" itemLabel="#{usr.nome}" itemValue="#{usr}" forceSelection="true" completeMethod="#{responsavelOrcamentoController.autocompleteUsuario}" minQueryLength="3" effect="fade">
-								        	<p:ajax event="query" global="false" />
-								        </p:autoComplete>
-								        <p:watermark value="Escreva o nome do usuário (Minímo 3 caracteres)." for="usuario" />
-									</div>
-								</div>
-							</div>
-							<div class="box-footer">
-								<div class="col-sm-3 col-md-3 pull-left" >
-									<p:commandButton
-										styleClass="btn-vermelho"
-										icon="fa fa-times"
-										value="Cancelar"
-										id="btn_cancelar"
-										immediate="true"
-										onclick="PF('modalUsuario').hide();"
-										ajax="true" />
-								</div>
-								<div class="col-sm-3 col-md-3 pull-right">
-									<p:commandButton
-										styleClass="btn-verde"
-										icon="fa fa-check"
-										value="Salvar"
-										id="btn_salvar"
-										process="@form:modalUsuario"
-										action="#{responsavelOrcamentoController.adicionarUsuario()}"
-										update="@form:mensagemModal, @form:modalUsuario, @form:resultado"
-										oncomplete="PF('modalUsuario').hide();"
-										ajax="true" />
-								</div>
-							</div>
-						</div>
-					</p:dialog>
+		    		<p:dataTable var="centroCusto" value="#{responsavelOrcamentoController.listaCentroCusto}" selection="#{responsavelOrcamentoController.listaCentroCustoSelecionado}" rendered="#{responsavelOrcamentoController.exibirResultado}" rowSelectMode="add"
+						emptyMessage="Nenhum responsável pelo orçamento neste centro de custo." rowKey="#{centroCusto.codigoCentroCusto}">
+						<p:ajax event="rowSelectCheckbox" update=":gridForm" global="false" listener="#{responsavelOrcamentoController.adicionarResponsavel}" />
+						<p:ajax event="rowUnselectCheckbox" update=":gridForm" global="false" listener="#{responsavelOrcamentoController.removerResponsavel}" />
+						<p:ajax event="rowSelect" global="false" update=":gridForm" listener="#{responsavelOrcamentoController.adicionarResponsavel}" />
+						<p:ajax event="rowUnselect" update=":gridForm" global="false" listener="#{responsavelOrcamentoController.removerResponsavel}" />
+						<p:ajax event="toggleSelect" update=":gridForm" global="true"  listener="#{responsavelOrcamentoController.salvarTodosResponsavel}" />
+						
+						<p:column selectionMode="multiple" width="5%" style="text-align:center"/>
+				        <p:column headerText="Código" width="200" style="text-align:center">
+				            <h:outputText value="#{centroCusto.codigoCentroCusto}" />
+				        </p:column>
+				        <p:column headerText="Centro de Custo">
+				            <h:outputText value="#{centroCusto.centroCusto.toUpperCase()}" />
+				        </p:column>
+				    </p:dataTable>
 				</h:form>
 			</div>
 		</ui:define>
